--- a/H1EmuLauncher/Windows/AddServerWindow.xaml
+++ b/H1EmuLauncher/Windows/AddServerWindow.xaml
@@ -32,6 +32,11 @@
     <Grid>
         <Grid>
 
+            <!-- Grainy texture -->
+            <Grid.Background>
+                <ImageBrush ImageSource="..\Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+            </Grid.Background>
+            
             <!-- Add server blur on unfocus -->
             <Grid.Effect>
                 <BlurEffect x:Name="addServerBlur"
@@ -50,9 +55,8 @@
             </Grid.RowDefinitions>
 
             <!-- Grid for logo and exit button -->
-            <Grid
-                MouseLeftButtonDown="AddServerTopBar" 
-                Background="#FF2A2A32">
+            <Grid MouseLeftButtonDown="AddServerTopBar" 
+                  Background="Transparent">
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -60,16 +64,14 @@
                 </Grid.ColumnDefinitions>
 
                 <!-- Logo -->
-                <DockPanel
-                    Height="60"
-                    HorizontalAlignment="Left"
-                    Margin="15,4,0,0">
+                <DockPanel Height="60"
+                           HorizontalAlignment="Left"
+                           Margin="15,4,0,0">
 
-                    <Image
-                        Source="..\Resources\H1EmuIcon.png"
-                        Width="140"
-                        Height="40"
-                        VerticalAlignment="Center"/>
+                    <Image Source="..\Resources\H1EmuIcon.png"
+                           Width="140"
+                           Height="40"
+                           VerticalAlignment="Center"/>
 
                 </DockPanel>
 
@@ -110,116 +112,122 @@
                     
                 </Border.Effect>
 
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+                <Border CornerRadius="5">
 
-                    <!-- Server name text box -->
-                    <TextBox x:Name="serverNameBox"
-                    Width="300"
-                    Height="35"
-                    Margin="0,12,0,0"
-                    Padding="10,0,0,0"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    FontSize="16"
-                    FontWeight="Light"
-                    GotFocus="ServerNameGotFocus"
-                    LostFocus="ServerNameLostFocus"
-                    Style="{DynamicResource TextBoxPrimaryStyle}"/>
+                    <!-- Grainy texture -->
+                    <Border.Background>
+                        <ImageBrush ImageSource="..\Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+                    </Border.Background>
+                    
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                    <!-- Hint for server name textbox -->
-                    <TextBlock x:Name="serverNameHint"
-                    Width="300"
-                    Height="27"
-                    Margin="0,12,0,0"
-                    Padding="12,4,0,0"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Center"
-                    IsHitTestVisible="False"
-                    Foreground="White"
-                    FontSize="16"
-                    FontWeight="Light"
-                    Text="{DynamicResource item144}"/>
+                        <!-- Server name text box -->
+                        <TextBox x:Name="serverNameBox"
+                                 Width="300"
+                                 Height="35"
+                                 Margin="0,12,0,0"
+                                 Padding="10,0,0,0"
+                                 VerticalAlignment="Center"
+                                 HorizontalAlignment="Center"
+                                 VerticalContentAlignment="Center"
+                                 FontSize="16"
+                                 FontWeight="Light"
+                                 GotFocus="ServerNameGotFocus"
+                                 LostFocus="ServerNameLostFocus"
+                                 Style="{DynamicResource TextBoxPrimaryStyle}"/>
 
-                    <!-- Server IP textbox -->
-                    <TextBox x:Name="serverIpBox"
-                    Grid.Row="1"
-                    Width="300"
-                    Height="35"
-                    Padding="10,0,0,0"
-                    VerticalAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    FontSize="16"
-                    FontWeight="Light"
-                    GotFocus="ServerIPGotFocus"
-                    LostFocus="ServerIPLostFocus"
-                    KeyDown="ServerIpBoxKeyDown"
-                    Style="{DynamicResource TextBoxPrimaryStyle}"/>
+                        <!-- Hint for server name textbox -->
+                        <TextBlock x:Name="serverNameHint"
+                                   Width="300"
+                                   Height="27"
+                                   Margin="0,12,0,0"
+                                   Padding="12,4,0,0"
+                                   VerticalAlignment="Center"
+                                   HorizontalAlignment="Center"
+                                   IsHitTestVisible="False"
+                                   Foreground="White"
+                                   FontSize="16"
+                                   FontWeight="Light"
+                                   Text="{DynamicResource item144}"/>
 
-                    <!-- Hint for server IP textbox -->
-                    <TextBlock x:Name="serverIpHint"
-                    Grid.Row="1"
-                    Width="300"
-                    Height="24"
-                    Padding="12,3,0,0"
-                    VerticalAlignment="Center"
-                    IsHitTestVisible="False"
-                    Foreground="White"
-                    FontSize="16"
-                    FontWeight="Light"
-                    Text="{DynamicResource item145}"/>
+                        <!-- Server IP textbox -->
+                        <TextBox x:Name="serverIpBox"
+                                 Grid.Row="1"
+                                 Width="300"
+                                 Height="35"
+                                 Padding="10,0,0,0"
+                                 VerticalAlignment="Center"
+                                 VerticalContentAlignment="Center"
+                                 FontSize="16"
+                                 FontWeight="Light"
+                                 GotFocus="ServerIPGotFocus"
+                                 LostFocus="ServerIPLostFocus"
+                                 KeyDown="ServerIpBoxKeyDown"
+                                 Style="{DynamicResource TextBoxPrimaryStyle}"/>
 
-                    <!-- Add server button -->
-                    <Button
-                    Grid.Row="2"
-                    Grid.Column="1"
-                    Click="AddButton"
-                    RenderOptions.BitmapScalingMode="Fant"
-                    Width="140"
-                    Height="38"
-                    Margin="160,0,0,0"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Center"
-                    Foreground="White"
-                    FontFamily="Arial Black"
-                    FontSize="22"
-                    BorderThickness="0"
-                    Content="{DynamicResource item18}"
-                    Style="{DynamicResource StandardButton}">
+                        <!-- Hint for server IP textbox -->
+                        <TextBlock x:Name="serverIpHint"
+                                   Grid.Row="1"
+                                   Width="300"
+                                   Height="24"
+                                   Padding="12,3,0,0"
+                                   VerticalAlignment="Center"
+                                   IsHitTestVisible="False"
+                                   Foreground="White"
+                                   FontSize="16"
+                                   FontWeight="Light"
+                                   Text="{DynamicResource item145}"/>
 
-                        <Button.Background>
-                            <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
-                        </Button.Background>
-                    </Button>
+                        <!-- Add server button -->
+                        <Button Grid.Row="2"
+                                Grid.Column="1"
+                                Click="AddButton"
+                                RenderOptions.BitmapScalingMode="Fant"
+                                Width="140"
+                                Height="38"
+                                Margin="160,0,0,0"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"
+                                Foreground="White"
+                                FontFamily="Arial Black"
+                                FontSize="22"
+                                BorderThickness="0"
+                                Content="{DynamicResource item18}"
+                                Style="{DynamicResource StandardButton}">
 
-                    <!-- Cancel button -->
-                    <Button
-                    Grid.Row="2"
-                    Grid.Column="1"
-                    Click="CancelButton"
-                    RenderOptions.BitmapScalingMode="Fant"
-                    Width="140"
-                    Height="38"
-                    Margin="0,0,160,0"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Center"
-                    Foreground="White"
-                    FontFamily="Arial Black"
-                    FontSize="22"
-                    BorderThickness="0"
-                    Content="{DynamicResource item28}"
-                    Style="{DynamicResource StandardButton}">
+                            <Button.Background>
+                                <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
+                            </Button.Background>
+                        </Button>
 
-                        <Button.Background>
-                            <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
-                        </Button.Background>
-                    </Button>
-                </Grid>
+                        <!-- Cancel button -->
+                        <Button Grid.Row="2"
+                                Grid.Column="1"
+                                Click="CancelButton"
+                                RenderOptions.BitmapScalingMode="Fant"
+                                Width="140"
+                                Height="38"
+                                Margin="0,0,160,0"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"
+                                Foreground="White"
+                                FontFamily="Arial Black"
+                                FontSize="22"
+                                BorderThickness="0"
+                                Content="{DynamicResource item28}"
+                                Style="{DynamicResource StandardButton}">
+
+                            <Button.Background>
+                                <ImageBrush ImageSource="..\Resources\StandardButton.png"/>
+                            </Button.Background>
+                        </Button>
+                    </Grid>
+                </Border>
             </Border>
         </Grid>
 
