--- a/H1EmuLauncher/App.xaml
+++ b/H1EmuLauncher/App.xaml
@@ -488,7 +488,9 @@
                             BorderThickness="{TemplateBinding BorderThickness}"
                             CornerRadius="5"
                             SnapsToDevicePixels="true">
-                            <Border
+
+                            <Border CornerRadius="5">
+                                <Border
                                 x:Name="splitBorder"
                                 Width="{DynamicResource {x:Static SystemParameters.VerticalScrollBarWidthKey}}"
                                 Margin="0"
@@ -497,13 +499,18 @@
                                 BorderThickness="1"
                                 CornerRadius="5"
                                 SnapsToDevicePixels="true">
-                                <Path
+                                    <Path
                                     x:Name="arrow"
                                     Margin="0"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
                                     Data="F1 M 0,0 L 2.667,2.66665 L 5.3334,0 L 5.3334,-1.78168 L 2.6667,0.88501 L0,-1.78168 L0,0 Z"
                                     Fill="{StaticResource ComboBox.Static.Glyph}" />
+                                </Border>
+
+                                <Border.Background>
+                                    <ImageBrush ImageSource="Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+                                </Border.Background>
                             </Border>
                         </Border>
                         <ControlTemplate.Triggers>
@@ -707,30 +714,37 @@
                             x:Name="dropDownBorder"
                             CornerRadius="5"
                             Background="#FF2A2A32"
-                            BorderBrush="Transparent"
-                            BorderThickness="0">
-                            <Grid Background="Transparent">
-                                <ScrollViewer x:Name="DropDownScrollViewer">
-                                    <Grid x:Name="grid" RenderOptions.ClearTypeHint="Enabled">
-                                        <Canvas
-                                        x:Name="canvas"
-                                        Width="0"
-                                        Height="0"
-                                        HorizontalAlignment="Left"
-                                        VerticalAlignment="Top">
-                                            <Rectangle
-                                            x:Name="opaqueRect"
-                                            Width="{Binding ActualWidth, ElementName=dropDownBorder}"
-                                            Height="{Binding ActualHeight, ElementName=dropDownBorder}"
-                                            Fill="Transparent" />
-                                        </Canvas>
-                                        <ItemsPresenter
-                                        x:Name="ItemsPresenter"
-                                        KeyboardNavigation.DirectionalNavigation="Contained"
-                                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                                    </Grid>
-                                </ScrollViewer>
-                            </Grid>
+                            BorderBrush="#444444"
+                            BorderThickness="1">
+
+                            <Border CornerRadius="5" BorderBrush="Purple">
+                                <Grid Background="Transparent">
+                                    <ScrollViewer x:Name="DropDownScrollViewer">
+                                        <Grid x:Name="grid" RenderOptions.ClearTypeHint="Enabled">
+                                            <Canvas
+                                                x:Name="canvas"
+                                                Width="0"
+                                                Height="0"
+                                                HorizontalAlignment="Left"
+                                                VerticalAlignment="Top">
+                                                <Rectangle
+                                                    x:Name="opaqueRect"
+                                                    Width="{Binding ActualWidth, ElementName=dropDownBorder}"
+                                                    Height="{Binding ActualHeight, ElementName=dropDownBorder}"
+                                                    Fill="Transparent" />
+                                            </Canvas>
+                                            <ItemsPresenter
+                                                x:Name="ItemsPresenter"
+                                                KeyboardNavigation.DirectionalNavigation="Contained"
+                                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                        </Grid>
+                                    </ScrollViewer>
+                                </Grid>
+
+                                <Border.Background>
+                                    <ImageBrush ImageSource="Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+                                </Border.Background>
+                            </Border>
                         </Border>
                     </theme:SystemDropShadowChrome>
                 </Popup>
@@ -801,7 +815,13 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ComboBoxItem}">
                         <Border x:Name="Border" BorderThickness="1" CornerRadius="5" Padding="6,4,6,4">
-                            <ContentPresenter/>
+                            <Border CornerRadius="5">
+                                <ContentPresenter/>
+
+                                <Border.Background>
+                                    <ImageBrush ImageSource="Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+                                </Border.Background>
+                            </Border>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
@@ -966,7 +986,9 @@
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             SnapsToDevicePixels="true">
-                            <ContentPresenter
+                            
+                            <Border>
+                                <ContentPresenter
                                 x:Name="contentPresenter"
                                 Margin="{TemplateBinding Padding}"
                                 HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
@@ -974,6 +996,11 @@
                                 Focusable="False"
                                 RecognizesAccessKey="True"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+
+                                <Border.Background>
+                                    <ImageBrush ImageSource="Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+                                </Border.Background>
+                            </Border>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsDefaulted" Value="true">
@@ -1012,7 +1039,9 @@
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             SnapsToDevicePixels="true">
-                            <ContentPresenter
+
+                            <Border>
+                                <ContentPresenter
                                 x:Name="contentPresenter"
                                 Margin="{TemplateBinding Padding}"
                                 HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
@@ -1020,6 +1049,11 @@
                                 Focusable="False"
                                 RecognizesAccessKey="True"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+
+                                <Border.Background>
+                                    <ImageBrush ImageSource="Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+                                </Border.Background>
+                            </Border>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsDefaulted" Value="true">
@@ -1124,13 +1158,20 @@
                             Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
-                            CornerRadius="4"
+                            CornerRadius="5"
                             SnapsToDevicePixels="True">
-                            <ScrollViewer
+
+                            <Border CornerRadius="5">
+                                <ScrollViewer
                                 x:Name="PART_ContentHost"
                                 Focusable="false"
                                 HorizontalScrollBarVisibility="Hidden"
                                 VerticalScrollBarVisibility="Hidden" />
+
+                                <Border.Background>
+                                    <ImageBrush ImageSource="Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+                                </Border.Background>
+                            </Border>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsEnabled" Value="false">
@@ -1181,13 +1222,20 @@
                             Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
-                            CornerRadius="4"
+                            CornerRadius="5"
                             SnapsToDevicePixels="True">
-                            <ScrollViewer
+
+                            <Border CornerRadius="5">
+                                <ScrollViewer
                                 x:Name="PART_ContentHost"
                                 Focusable="false"
                                 HorizontalScrollBarVisibility="Hidden"
                                 VerticalScrollBarVisibility="Hidden" />
+
+                                <Border.Background>
+                                    <ImageBrush ImageSource="Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+                                </Border.Background>
+                            </Border>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsEnabled" Value="false">
